Fixed links at bottom of tags list being wrong color

--- a/less/app.less
+++ b/less/app.less
@@ -670,7 +670,10 @@ h1 + #story-meta { margin-top: -11px; }
         font-size: 15px;
         margin-top:10px;
         a{
-            color:@pine;
+            color:@pine-links;
+        }
+        a:hover{
+           color: lighten(@pine, 20%);
         }
     }
 }
